--- a/playbooks/roles/mindx.k8s.kubevip/defaults/main.yml
+++ b/playbooks/roles/mindx.k8s.kubevip/defaults/main.yml
@@ -1,3 +1,4 @@
+ORIGIN_KUBE_VIP_IMAGE: ghcr.io/kube-vip/kube-vip
 KUBE_VIP_IMAGE: ghcr.io/kube-vip
 KVVERSION: v0.4.4
 HARBOR_URL: "{{HARBOR_IP}}:{{HARBOR_HTTPS_PORT}}/"
