--- a/playbooks/01.resource.yaml
+++ b/playbooks/01.resource.yaml
@@ -13,6 +13,7 @@
           - linux_x86_64
           - ubuntu_18.04_aarch64
           - ubuntu_18.04_x86_64
+          - centos_7_aarch64
 
 # copy nfs resources to nfs_server host
 - hosts:
@@ -24,6 +25,7 @@
         resource_list:
           - ubuntu_18.04_aarch64
           - ubuntu_18.04_x86_64
+          - centos_7_aarch64
 
 # copy harbor install package to harbor host
 - hosts: harbor
