--- a/playbooks/roles/mindx.k8s.install/tasks/common.yml
+++ b/playbooks/roles/mindx.k8s.install/tasks/common.yml
@@ -66,3 +66,12 @@
     dest: /usr/bin
     mode: 0750
     remote_src: yes
+
+- name: "stopped firewalld"
+  systemd:
+    name: firewalld
+    enabled: no
+    state: stopped
+  when:
+    - OS_ID == 'centos'
+    - OS_VERSION_ID == '7'
