--- a/playbooks/roles/mindx.mysql/defaults/main.yml
+++ b/playbooks/roles/mindx.mysql/defaults/main.yml
@@ -1,6 +1,6 @@
 # defaults file for mindx.mysql
 resource_dir: "~/resources"
-OS_ID: "{{ lookup('ini', 'ID type=properties section=global file=/etc/os-release') }}"
+OS_ID: "{{ lookup('ini', 'ID type=properties section=global file=/etc/os-release') | replace('\"', '') }}"
 OS_VERSION_ID: "{{ lookup('ini', 'VERSION_ID type=properties section=global file=/etc/os-release') | replace('\"', '') }}"
 
 image_dir: "{{resource_dir}}/images/{{ansible_architecture}}"
