--- a/playbooks/roles/mindx.basic/defaults/main.yml
+++ b/playbooks/roles/mindx.basic/defaults/main.yml
@@ -5,7 +5,7 @@ DL_UID: "{{ MINDX_USER_ID }}"
 DL_GID: "{{ MINDX_GROUP_ID }}"
 
 resource_dir: "~/resources"
-OS_ID: "{{ lookup('ini', 'ID type=properties section=global file=/etc/os-release') }}"
+OS_ID: "{{ lookup('ini', 'ID type=properties section=global file=/etc/os-release') | replace('\"', '') }}"
 OS_VERSION_ID: "{{ lookup('ini', 'VERSION_ID type=properties section=global file=/etc/os-release') | replace('\"', '') }}"
 
 haveged_dir: "{{resource_dir}}/{{OS_ID}}_{{OS_VERSION_ID}}_{{ansible_architecture}}/haveged"
