--- a/playbooks/roles/mindx.k8s.install/tasks/main.yml
+++ b/playbooks/roles/mindx.k8s.install/tasks/main.yml
@@ -7,6 +7,12 @@
     name: "{{set_hostname}}"
   when: set_hostname is defined
 
+- name: set bridge-nf-call-iptables 1
+  shell: echo 1 > /proc/sys/net/bridge/bridge-nf-call-iptables
+  when:
+    - OS_ID == 'centos'
+    - OS_VERSION_ID == '7'
+
 - name: disable swap
   shell: swapoff -a
 
@@ -16,10 +22,20 @@
     state: absent
     regexp: '.*?swap.*?'
 
-- include_tasks: ubuntu_18.04.yml
+- name: install sys for ubuntu
+  shell: dpkg --force-all -i {{ sys_dir }}/*.deb
+  environment:
+    DEBIAN_FRONTEND: noninteractive
+    DEBIAN_PRIORITY: critical
   when:
     - OS_ID == 'ubuntu'
     - OS_VERSION_ID == '18.04'
+
+- name: install sys for centos
+  shell: rpm -ivh --force --nodeps --replacepkgs {{ sys_dir }}/*.rpm
+  when:
+    - OS_ID == 'centos'
+    - OS_VERSION_ID == '7'
 
 - include_tasks: common.yml
 
