--- a/playbooks/roles/mindx.k8s.master/defaults/main.yml
+++ b/playbooks/roles/mindx.k8s.master/defaults/main.yml
@@ -1,6 +1,6 @@
 # defaults file for mindx.k8s.master
 resource_dir: "~/resources"
-OS_ID: "{{ lookup('ini', 'ID type=properties section=global file=/etc/os-release') }}"
+OS_ID: "{{ lookup('ini', 'ID type=properties section=global file=/etc/os-release') | replace('\"', '') }}"
 OS_VERSION_ID: "{{ lookup('ini', 'VERSION_ID type=properties section=global file=/etc/os-release') | replace('\"', '') }}"
 
 deb_dir: "{{resource_dir}}/{{OS_ID}}_{{OS_VERSION_ID}}_{{ansible_architecture}}/k8s"
