--- a/playbooks/roles/mindx.nfs.client/defaults/main.yml
+++ b/playbooks/roles/mindx.nfs.client/defaults/main.yml
@@ -1,6 +1,6 @@
 # defaults file for mindx.nfs.client
 resource_dir: "~/resources"
-OS_ID: "{{ lookup('ini', 'ID type=properties section=global file=/etc/os-release') }}"
+OS_ID: "{{ lookup('ini', 'ID type=properties section=global file=/etc/os-release') | replace('\"', '') }}"
 OS_VERSION_ID: "{{ lookup('ini', 'VERSION_ID type=properties section=global file=/etc/os-release') | replace('\"', '') }}"
 
-client_deb: "{{resource_dir}}/{{OS_ID}}_{{OS_VERSION_ID}}_{{ansible_architecture}}/nfsclient"
+client_pkg: "{{resource_dir}}/{{OS_ID}}_{{OS_VERSION_ID}}_{{ansible_architecture}}/nfsclient"
