--- a/playbooks/roles/mindx.k8s.master/defaults/main.yml
+++ b/playbooks/roles/mindx.k8s.master/defaults/main.yml
@@ -8,9 +8,8 @@ image_dir: "{{resource_dir}}/images/{{ansible_architecture}}"
 calico_version: v3.20.2
 kubernetes_version: v1.19.16
 pod_network_cidr: "192.168.0.0/16"
-apiserver_advertise_address: "{{K8S_API_SERVER_IP}}"
 k8s_namespace: "mindx-dl"
 IMAGE_REPO: "{{HARBOR_IP}}:{{HARBOR_HTTPS_PORT}}"
 K8S_REPO: "{{HARBOR_IP}}:{{HARBOR_HTTPS_PORT}}/k8s.gcr.io"
 CALICO_YAML_DIR: "~/deploy_yamls/calico"
-MASTER_IP: "{{ ansible_default_ipv4.address }}"
+MASTER_IP: "{{ apiserver_advertise_address if apiserver_advertise_address != '' else ansible_default_ipv4.address}}"
