--- a/playbooks/task_set_harbor_ip.yaml
+++ b/playbooks/task_set_harbor_ip.yaml
@@ -1,5 +1,5 @@
 - name: set HARBOR_IP
   set_fact:
-    HARBOR_IP: "{{ hostvars[groups['harbor'][0]]['ansible_default_ipv4']['address'] if HARBOR_HOST_IP == '' else HARBOR_HOST_IP }}"
+    HARBOR_IP: "{{ hostvars[groups['harbor'][0]]['ansible_default_ipv4']['address'] if harbor_host_ip == '' else harbor_host_ip }}"
     cacheable: yes
   when: HARBOR_IP is not defined
