deploy mysql db as one

--- a/playbooks/roles/mindx.harbor.push/tasks/push.yml
+++ b/playbooks/roles/mindx.harbor.push/tasks/push.yml
@@ -46,7 +46,7 @@
   shell: |
     kubectl exec {{ mysql_pod.stdout }} -n {{ k8s_namespace }} -- \
     mysql -u image_user -p{{ MYSQL_PASSWORD }} -e \
-    "USE image_manager; \
+    "USE dl_platform; \
     INSERT IGNORE INTO image_configs(image_name, image_tag, image_size, harbor_path, prefabricated, image_arch, create_time) \
     VALUES('{{manifest_name.split('/')[-1]}}', '{{tag}}', \
     {{ (image_size.stdout | replace(image_size.stdout[-2:], '') | float) * ((1024 if 'GB' in image_size.stdout else 1) | float) }}, \
