--- a/playbooks/roles/mindx.redis/tasks/main.yml
+++ b/playbooks/roles/mindx.redis/tasks/main.yml
@@ -7,8 +7,8 @@
 - name: create secret for redis
   shell: |
     kubectl delete secret --namespace={{ REDIS_NAMESPACE }} redis-config-secret redis-secret-apigw --ignore-not-found=true
-    kubectl create secret --namespace={{ REDIS_NAMESPACE }} generic redis-config-secret --from-literal=redis-config="requirepass {{ REDIS_PASSWORD }}"
-    kubectl create secret --namespace={{ REDIS_NAMESPACE }} generic redis-secret-apigw --from-literal="connection-path={{ REDIS_PASSWORD }}@redis:6379"
+    kubectl create secret --namespace={{ REDIS_NAMESPACE }} generic redis-config-secret --from-literal='redis-config=requirepass {{ REDIS_PASSWORD }}'
+    kubectl create secret --namespace={{ REDIS_NAMESPACE }} generic redis-secret-apigw --from-literal='connection-path={{ REDIS_PASSWORD }}@redis:6379'
   environment:
     http_proxy: ""
     https_proxy: ""
