修改apiserver_advertise_address bug

--- a/playbooks/roles/mindx.k8s.master/defaults/main.yml
+++ b/playbooks/roles/mindx.k8s.master/defaults/main.yml
@@ -12,4 +12,4 @@ k8s_namespace: "mindx-dl"
 IMAGE_REPO: "{{HARBOR_IP}}:{{HARBOR_HTTPS_PORT}}"
 K8S_REPO: "{{HARBOR_IP}}:{{HARBOR_HTTPS_PORT}}/k8s.gcr.io"
 CALICO_YAML_DIR: "~/deploy_yamls/calico"
-MASTER_IP: "{{ apiserver_advertise_address if apiserver_advertise_address != '' else ansible_default_ipv4.address}}"
+MASTER_IP: "{{ apiserver_advertise_address if apiserver_advertise_address is defined else ansible_default_ipv4.address}}"
