--- a/playbooks/roles/mindx.k8s.master_backup/tasks/main.yml
+++ b/playbooks/roles/mindx.k8s.master_backup/tasks/main.yml
@@ -34,7 +34,7 @@
   set_fact:
     addr_cmd: "--apiserver-advertise-address {{ apiserver_advertise_address }}"
   when:
-    - apiserver_advertise_address | length != 0
+    - apiserver_advertise_address is defined
 
 - name: get token
   shell: kubeadm token create --print-join-command
