--- a/playbooks/roles/mindx.k8s.master/tasks/main.yml
+++ b/playbooks/roles/mindx.k8s.master/tasks/main.yml
@@ -143,7 +143,7 @@
 
 - name: label apigw-selector worker
   shell: kubectl label --overwrite node {{ hostvars[groups['worker'][0]]['ansible_hostname'] }} apigw-selector=apigw-business-worker-node
-  when: "'worker' in groups and groups['worker'] | length == 0"
+  when: "'worker' in groups and groups['worker'] | length != 0"
   environment:
     http_proxy: ""
     https_proxy: ""
