--- a/playbooks/roles/mindx.k8s.master/defaults/main.yml
+++ b/playbooks/roles/mindx.k8s.master/defaults/main.yml
@@ -7,7 +7,7 @@ deb_dir: "{{resource_dir}}/{{OS_ID}}_{{OS_VERSION_ID}}_{{ansible_architecture}}/
 image_dir: "{{resource_dir}}/images/{{ansible_architecture}}"
 calico_version: v3.20.2
 kubernetes_version: v1.19.16
-pod_network_cidr: "192.168.0.0/16"
+pod_network_cidr: "{{POD_NETWORK_CIDR}}"
 k8s_namespace: "mindx-dl"
 IMAGE_REPO: "{{HARBOR_IP}}:{{HARBOR_HTTPS_PORT}}"
 K8S_REPO: "{{HARBOR_IP}}:{{HARBOR_HTTPS_PORT}}/k8s.gcr.io"
