--- a/playbooks/roles/mindx.resource/defaults/main.yml
+++ b/playbooks/roles/mindx.resource/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 # defaults file for mindx.resource
-ansible_python_interpreter: /usr/bin/python3
 host_count: "{{ ansible_play_hosts_all | length }}"
 first_host: "{{ ansible_play_hosts_all[0] }}"
 resource_dir: "~/resources"
 no_copy_flag: "{{ resources_no_copy | default('false') }}"
+harbor_item: "{{ 'harbor-offline-installer-aarch64-v2.3.3.tgz' if ansible_architecture == 'aarch64' else 'harbor-offline-installer-v2.3.3.tgz' }}"
