--- a/group_vars/all.yaml
+++ b/group_vars/all.yaml
@@ -27,10 +27,12 @@ CEPHFS_USER: ""
 # cephfs key. can not be empty if "STORAGE_TYPE" is "CEPHFS"
 CEPHFS_KEY: ""
 
-# mindx k8s namespace
-K8S_NAMESPACE: "mindx-dl"
 # k8s pod network cidr
 POD_NETWORK_CIDR: "192.168.0.0/16"
+# k8s service cidr
+SERVICE_CIDR: "10.96.0.0/12"
+# mindx k8s namespace
+K8S_NAMESPACE: "mindx-dl"
 
 #mindx user
 MINDX_USER: hwMindX
